--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -62,6 +62,7 @@ jobs:
             exit 1
           fi
 
+      # Use GitHub OIDC to assume AWS role (no static credentials).
       - name: Configure AWS credentials (GitHub OIDC)
         if: github.event_name != 'pull_request'
         uses: aws-actions/configure-aws-credentials@v4
@@ -78,6 +79,7 @@ jobs:
           sudo apt-get install -y podman wget
           wget -qO- https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sudo sh -s -- -b /usr/local/bin
 
+      # Determine image tags based on event type (PR vs main).
       - name: Set image variables
         id: vars
         shell: bash
@@ -85,13 +87,13 @@ jobs:
           set -euo pipefail
 
           if [ "${{ github.event_name }}" = "pull_request" ]; then
-            # PR run: local tags only (no AWS/ECR)
+            # PR run: local tags only (no AWS/ECR interaction)
             echo "ecr_registry=" >> "$GITHUB_OUTPUT"
             echo "repo_uri=local/${ECR_REPO}" >> "$GITHUB_OUTPUT"
             echo "image_sha=tasky:${GITHUB_SHA}" >> "$GITHUB_OUTPUT"
             echo "image_latest=tasky:pr" >> "$GITHUB_OUTPUT"
           else
-            # Main branch build: ECR tags (requires AWS auth)
+            # Main branch build: tag image for ECR
             ACCOUNT_ID="$(aws sts get-caller-identity --query Account --output text)"
             ECR_REGISTRY="${ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com"
             REPO_URI="${ECR_REGISTRY}/${ECR_REPO}"
@@ -102,7 +104,7 @@ jobs:
             echo "image_latest=${REPO_URI}:latest" >> "$GITHUB_OUTPUT"
           fi
 
-      # Store the image reference as an env var for later steps in THIS job (no job outputs).
+      # Persist image references for later steps in this job.
       - name: Export image sha (job env)
         if: github.event_name != 'pull_request'
         shell: bash
@@ -112,6 +114,7 @@ jobs:
           echo "IMAGE_LATEST=${{ steps.vars.outputs.image_latest }}" >> "$GITHUB_ENV"
           echo "ECR_REGISTRY=${{ steps.vars.outputs.ecr_registry }}" >> "$GITHUB_ENV"
 
+      # Authenticate podman to ECR using temporary AWS credentials.
       - name: Login to Amazon ECR (podman)
         if: github.event_name != 'pull_request'
         shell: bash
@@ -119,19 +122,25 @@ jobs:
           set -euo pipefail
           aws ecr get-login-password --region "${AWS_REGION}" | podman login --username AWS --password-stdin "${ECR_REGISTRY}"
 
+      # Build image and embed Git commit SHA into the container.
       - name: Build image (podman)
         shell: bash
         run: |
           set -euo pipefail
-          podman build -t "${{ steps.vars.outputs.image_sha }}" -t "${{ steps.vars.outputs.image_latest }}" tasky-main
+          podman build \
+            --build-arg GIT_SHA="${GITHUB_SHA}" \
+            -t "${{ steps.vars.outputs.image_sha }}" \
+            -t "${{ steps.vars.outputs.image_latest }}" \
+            tasky-main
 
+      # Save image locally so Trivy can scan without pulling from a registry.
       - name: Save image to archive (for Trivy)
         shell: bash
         run: |
           set -euo pipefail
           podman save --format docker-archive -o image.tar "${{ steps.vars.outputs.image_sha }}"
 
-      # Scan the image archive and publish SARIF.
+      # Scan image and emit SARIF for security tooling.
       - name: Trivy scan image archive (SARIF)
         shell: bash
         run: |
@@ -146,14 +155,14 @@ jobs:
           if-no-files-found: error
           retention-days: 7
 
-      # Show scan output in logs.
+      # Human-readable vulnerability output for pipeline logs.
       - name: Trivy scan image archive (table)
         shell: bash
         run: |
           set -euo pipefail
           trivy image --input image.tar --format table
 
-      # Push both SHA and latest tags.
+      # Push immutable (SHA) and mutable (latest) tags.
       - name: Push image to ECR (podman)
         if: github.event_name != 'pull_request'
         shell: bash
@@ -162,7 +171,7 @@ jobs:
           podman push "${IMAGE_SHA}"
           podman push "${IMAGE_LATEST}"
 
-      # Deploy only when manually dispatched and deploy=true
+      # Deploy only when manually triggered and explicitly approved.
       - name: Deploy updated image to Kubernetes
         if: ${{ github.event_name == 'workflow_dispatch' && inputs.deploy == 'true' }}
         shell: bash
@@ -172,7 +181,7 @@ jobs:
           kubectl -n "${K8S_NAMESPACE}" set image "deployment/${DEPLOYMENT_NAME}" "${CONTAINER_NAME}=${IMAGE_SHA}"
           kubectl -n "${K8S_NAMESPACE}" rollout status "deployment/${DEPLOYMENT_NAME}" --timeout=180s
 
-      # Verify the file generated during the image build (only after deploy)
+      # Verify build metadata inside the running container.
       - name: Verify wizexercise.txt in running pod
         if: ${{ github.event_name == 'workflow_dispatch' && inputs.deploy == 'true' }}
         shell: bash
